cloud-native/kubernetes-in-action/fortune-pod-args.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: fortune
spec:
  containers:
    - name: html-generator
      image: luksa/fortune:args
      args: ["2"]
      volumeMounts:
        - name: html
          mountPath: /var/htdocs
    - name: web-server
      image: nginx:alpine
      volumeMounts:
        - name: html
          mountPath: /var/share/nginx/html
          readOnly: true
      ports:
        - containerPort: 80
          protocol: TCP
  volumes:
    - name: html
      emptyDir:
        medium: Memory
