cloud-native/kubernetes-in-action/kubia-deployment-v3-with-readinesscheck.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kubia
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      name: kubia
      labels:
        app: kubia
    spec:
      containers:
        - name: nodejs
          image: luksa/kubia:v3
          readinessProbe:
            periodSeconds: 1
            httpGet:
              path: /
              port: 8080
