cloud-native/kubernetes-in-action/mongodb-pod-aws.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
spec:
  volumes:
    - name: mongodb-data
      awsElasticBlockStore:
        volumeID: my-volume
        fsType: ext4
  containers:
    - name: mongodb
      image: mongo
      volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
      ports:
        - containerPort: 27017
          protocol: TCP
