cloud-native/kubernetes-in-action/pod-with-termination-msg.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-termination-message
spec:
  containers:
    - name: main
      image: busybox
      terminationMessagePath: /var/termination-reason
      command:
        - sh
        - -c
        - 'echo "Oops: I''m dying" > /var/termination-reason; exit 1'
